--- a/apps/frontend/src/app/app.component.html
+++ b/apps/frontend/src/app/app.component.html
@@ -1,1 +1,3 @@
-<video-stream-videos></video-stream-videos>
+<div class="pt-5 flex justify-center">
+    <video-stream-videos></video-stream-videos>
+</div>
