Frontend size display

--- a/apps/frontend/src/app/videos/videos.component.html
+++ b/apps/frontend/src/app/videos/videos.component.html
@@ -48,7 +48,7 @@
               <td
                 class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap"
               >
-                {{ video.size }}s
+                {{ video.size / 1024 / 1024 | number: '1.0-2' }} MB
               </td>
               <td
                 class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap"
